bug 1 - text not centre aligned, index how it works steps

--- a/coffeeroasters-subscription-site/styles/home.css
+++ b/coffeeroasters-subscription-site/styles/home.css
@@ -114,6 +114,10 @@
   text-align: center;
   margin-bottom: 1.5rem;
 }
+.how-it-works .heading--4 {
+  width: 100%;
+  text-align: center;
+}
 .how-it-works .heading--4::before {
   display: block;
   counter-increment: how-it-works-item;
@@ -217,6 +221,7 @@
   }
   .how-it-works .heading--4 {
     margin-bottom: 0.875rem;
+    text-align: left;
   }
   .how-it-works .heading--4::before {
     text-align: left;
